--- a/env/development/docker-compose.yml
+++ b/env/development/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 
 services:
-  postgres:
+  database:
     image: postgres:15
-    container_name: community_bot
+    container_name: community_bot_database
     environment:
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
@@ -12,5 +12,3 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-volumes:
-  postgres_data:
