Prod deployment by docker-compose

--- a/env/prod/.env-to-rename
+++ b/env/prod/.env-to-rename
@@ -1,6 +1,6 @@
 POSTGRES_USER: test
 POSTGRES_PASSWORD: test
 POSTGRES_DB: community_bot
-POSTGRES_PATH: localhost
+POSTGRES_PATH: database
 COMMUNITY_BOT_SECRET_KEY: bot_secret_key
 COMMUNITY_BOT_USERNAME: bot_username
