--- a/pom.xml
+++ b/pom.xml
@@ -119,18 +119,18 @@
                     </args>
                     <compilerPlugins>
                         <plugin>spring</plugin>
-                        <plugin>no-arg</plugin>
                         <plugin>jpa</plugin>
-                        <plugin>noarg</plugin>
-                        <pluginOptions>
-                            <option>all-open-annotation:javax.persistence.Entity</option>
-                        </pluginOptions>
                     </compilerPlugins>
                 </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.jetbrains.kotlin</groupId>
                         <artifactId>kotlin-maven-allopen</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-noarg</artifactId>
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
