--- a/env/development/docker-compose.yml
+++ b/env/development/docker-compose.yml
@@ -3,12 +3,14 @@ version: '3.8'
 services:
   database:
     image: postgres:15
-    container_name: community_bot_database
+    container_name: dev_community_bot_database
     environment:
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
       POSTGRES_DB: community_bot
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+volumes:
+  postgres_data:
