--- a/env/prod/docker-compose.yml
+++ b/env/prod/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     container_name: community_bot_application
     build:
       context: ../../
-      dockerfile: ../../Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     env_file:
