--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   liquibase:
     change-log: classpath:/db/changelog.yaml
   datasource:
-    url: "jdbc:postgresql://${POSTGRES_PATH}}:5432/${POSTGRES_DB}"
+    url: "jdbc:postgresql://${POSTGRES_PATH}:5432/${POSTGRES_DB}"
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
