--- a/env/prod/.env-to-rename
+++ b/env/prod/.env-to-rename
@@ -2,5 +2,6 @@ POSTGRES_USER: test
 POSTGRES_PASSWORD: test
 POSTGRES_DB: community_bot
 POSTGRES_PATH: database
+POSTGRES_PORT: 9999
 COMMUNITY_BOT_SECRET_KEY: bot_secret_key
 COMMUNITY_BOT_USERNAME: bot_username
